<resources>
    <string name="app_name">KepKet</string>
    <string name="cd_logo">Logo</string>
    <string name="title_login">Kiriw</string>
    <string name="title_username">Paydalanıwshı atı</string>
    <string name="hint_username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_username_and_password">Kiriw ushın paydalanıwshı atıńız hám parolińizdi kiritiń.</string>
    <string name="login_to_account">Akkountqa kiriw</string>
    <string name="cd_add">Add button</string>
    <string name="order">Buyırtpa</string>
    <string name="menu">Menyu</string>
    <string name="hint_search">Izlew</string>
    <string name="cd_food_image">Food image</string>
    <string name="cd_chip_icon">Chip icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tables">Stollar</string>
    <string name="title_send_order">Buyırtpa beriw</string>
    <string name="summa">Summa</string>
    <string name="table_number">№ %1$s</string>
    <string name="title_complete_order">Jetkerildi</string>
    <string name="template_name_and_quantity">%1$s x %2$s</string>
</resources>
