<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/order_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_toolbar_gradient"
        app:navigationIcon="@drawable/ic_back_white"
        app:title="@string/order"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tableNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_100"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="32"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.KepKet.Black"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFoods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:clipToPadding="false"
            android:paddingBottom="200dp"
            tools:listitem="@layout/item_food_controller" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet_summa"
        android:padding="@dimen/small_100"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:visibility="gone"
            android:inputType="text"
            android:drawableStart="@drawable/ic_discount"
            android:textAppearance="@style/TextAppearance.KepKet.Black"
            android:hint="@string/hint_username"
            android:backgroundTint="@color/white"
            android:background="@drawable/bg_rounded_stroke"
            android:layout_marginVertical="@dimen/small_100"
            android:padding="@dimen/small_100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/normal_100"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/summa"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.KepKet.Black"/>

                <TextView
                    android:id="@+id/summa"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/summa"
                    android:gravity="end"
                    android:textSize="18sp"
                    android:textColor="@color/bright_green"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.KepKet.Black"/>
            </LinearLayout>



        </LinearLayout>



        <FrameLayout
            android:id="@+id/signInLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_gradient_rounded_rectangle"
            android:layout_marginVertical="@dimen/normal_100"
            android:padding="@dimen/normal_100">

            <TextView
                android:id="@+id/sendOrderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.KepKet.Black"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/title_send_order"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/sendOrderProgress"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_100"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/white" />


        </FrameLayout>


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
